add the game over
but the game give me a bomb where the bombs don't exist

--- a/style.css
+++ b/style.css
@@ -51,3 +51,17 @@ h2 {
 .crimson {
   background-color: crimson;
 }
+
+.loseContainer {
+  width: 80%;
+  height: calc(100vh - 80px);
+  font-size: 2rem;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  margin: auto;
+}
+
+span {
+  color: crimson;
+}
